changes since 2.0.0:
- added re-initialization of the PerPlayerSettings object to avoid problems with /reload 